Fix bug 1358, "Topology manager does not support MTS message address" Created new "type" field on entries to replace the "isNode" field; the new type field supports "agent", "node-agent", and "system" types.  Modified agent base-classes, mts, and servlet to support this new type field.
NOTE: Did not update "mts/NameSupportImpl.java".  I'll let
Rich Shapiro commit the MTS modification along with other
(unrelated) modifications he is working on.